# capitaine-python

./: .env.example  .env.monitoring.example  .gitignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PR_DESCRIPTION.md  QUAL-007_SUMMARY.md  README.md  README_EN.md  README_TESTS.md  REFACTORING_PLAN.md  SECURITY_REPORT.md  SECURITY_SUMMARY_DEVS.md  UI_DESIGN_PROPOSAL.md  analyze_run_with_input.py  child_experience_test_1760281592.json  child_experience_test_1760281692.json  child_experience_test_1760281769.json  conftest.py  debug-cours.html  debug-i18n.js  debug_api.py  docker-compose.yml  fix_json_exercises.py  inject-debug.html  progress.db  pyproject.toml  pytest.ini  python-basics-backup.json  requirements-test.txt  security_check.sh  test-debug.html  test-direct.html  test-langue.html  test-localization.html  test_child_experience.py  test_child_experience_final.py  (+9 more)
.github/workflows/: ci.yml  test-suite.yml
app/: Dockerfile  __init__.py
app/backend/: .coverage  __init__.py  config.py  course_manager.py  db.py  exercise_validator.py  exercises.py  grader.py  main.py  progress.db  pytest.ini  run_all_tests.py  secure_grader.py  security.py  test_config.py  test_course_manager.py  test_db.py  test_exercises.py  test_grader.py  test_monitoring_dashboard.py  test_refactor_validation.py
app/backend/courses/: python-adventure.json  python-basics.json  python-expert-corrige.json  python-expert-enriched-corrige.json  python-expert-enriched.json  python-expert.json  python-expert.json.backup
app/backend/scripts/: enrich_course.py
app/frontend/: app-simple.js  app.js  app_debug.js  debug.html  i18n.json  index-test.html  index.html  test-background.html  test.html  test_complet.html  test_refactor.html
docs/: INPUT_MANAGEMENT_ANALYSIS.md  REFACTOR-004_SUMMARY.md  file-structure.md  fix-v2.2.6-theory-lessons.md  installation-guide.md  json-format-specification.md  security-improvements-SEC-002.md  technical-architecture.md  test-suite-TEST-003.md
docs/implementation/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md
docs/monitoring/: MONITORING_ADMIN.md  MONITORING_QUICK_START.md
docs/planning/: CHILD_MODE_IMPLEMENTATION_PLAN.md
docs/quality/: QUAL-008_SUMMARY.md  QUAL-009_SUMMARY.md  VALIDATION_INTEGRATION_GUIDE.md
docs/security/: EXERCISE_PATTERNS_GUIDE.md  SECURITY_RULES_CHEATSHEET.md
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/health-checks/: api-health.py  piston-health.py
monitoring/loki/: loki-config.yaml
monitoring/nginx/: nginx.conf
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alerts.yml
monitoring/promtail/: promtail-config.yaml
monitoring/scripts/: emergency-recovery.sh  monitor.sh  quick-deploy.sh
monitoring/watchdog/: Dockerfile
monitoring/watchdog/config/: watchdog.yaml
monitoring/watchdog/src/: watchdog.py
tests/: test_course_import.py
tests/backend/: test_config.py  test_course_manager.py  test_db_complete.py  test_e2e_ui.py  test_main.py  test_performance_monitoring.py  test_secure_grader_complete.py  test_security.py  test_security_complete.py
